# reportengine

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.ciscripts/: build-deploy.sh  build-deploy2.sh
.github/workflows/: conda.yml  tests.yml
conda-recipe/: build.sh  meta.yaml
docs/: DESIGN.md
example/: README.md  pyproject.toml  report.yaml
example/flowers/: __init__.py  actions.py
src/: dag.py  reportbuilder.py  resourcebuilder.py  templateparser.py  utils.py
src/reportengine/: __init__.py  api.py  app.py  baseexceptions.py  caching.py  checks.py  colors.py  compat.py  configparser.py  dag.py  environment.py  figure.py  filefinder.py  floatformatting.py  formattingtools.py  helputils.py  inputcache.py  namespaces.py  rb2.py  report.py  resourcebuilder.py  table.py  templateparser.py  utils.py
src/reportengine/styles/: __init__.py  report.css
src/reportengine/templates/: test_new.md
src/reportengine/tests/: Untitled.ipynb  test_api.py  test_app.py  test_builder.py  test_cache.py  test_complexinput.py  test_configparser.py  test_dag.py  test_defaults.py  test_executor.py  test_filefinder.py  test_floatformatting.py  test_helputils.py  test_namespaces.py  test_report.py  test_temparser.py
src/templates/: test.md
src/tests/: test_builder.py  test_dag.py  test_executor.py  test_temparser.py
