[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "reportengine"
author = "Zahari Kassabov"
author-email = "zk261@cam.ac.uk"
home-page = "https://github.com/NNPDF/reportengine/"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7"
]
description-file="README.md"
requires = [
    "jinja2",
    "ruamel_yaml",
    "matplotlib",
    "pandas",
    "pygments",
    "blessings",
    "curio ==0.9",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "hypothesis",
]

