[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "reportengine"
author = "Zahari Kassabov"
author-email = "zk261@cam.ac.uk"
home-page = "https://github.com/NNPDF/reportengine/"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7"
]
description-file="README.md"
requires = [
    "jinja2",
    "ruamel_yaml<0.18", # the code is not compatible with ruamel 0.18
    "matplotlib",
    "pandas",
    "pygments",
    "blessings",
    "dask[distributed]",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "hypothesis",
]
dashboard = [
    "bokeh!=3.0.*,>=2.4.2"
]
